第一个完成版，修复了若干bug
